# oxc

./: Cargo.toml
crates/oxc_ast/src/: ast_kind_impl.rs
crates/oxc_linter/src/: rules.rs
crates/oxc_linter/src/rules/eslint/: max_statements.rs  no_dupe_else_if.rs  no_empty_pattern.rs  no_lonely_if.rs  no_unneeded_ternary.rs
crates/oxc_linter/src/rules/react/: jsx_no_script_url.rs
crates/oxc_linter/src/rules/typescript/: no_require_imports.rs
crates/oxc_linter/src/rules/unicorn/: prefer_string_raw.rs
crates/oxc_linter/src/snapshots/: eslint_no_unneeded_ternary.snap
crates/oxc_minifier/: Cargo.toml
crates/oxc_minifier/proptest-regressions/peephole/: minimize_conditional_expression.txt
crates/oxc_minifier/src/peephole/: minimize_conditional_expression.rs
crates/oxc_parser/: Cargo.toml
crates/oxc_semantic/src/: builder.rs
tasks/ast_tools/src/generators/: ast_kind.rs
tasks/pbt/: Cargo.toml  pbt.ts
tasks/pbt/proptest-regressions/: lib.txt
tasks/pbt/src/: lib.rs
