[package]
name = "oxc_tasks_pbt"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[lib]
test = true
doctest = false

[dependencies]
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_ast_visit = { workspace = true }
oxc_diagnostics = { workspace = true }
oxc_semantic = { workspace = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true }
oxc_codegen = { workspace = true }
oxc_data_structures = { workspace = true }
oxc_ecmascript = { workspace = true }
oxc_mangler = { workspace = true }
oxc_parser = { workspace = true }


indexmap = { workspace = true }
rustc-hash = { workspace = true }
proptest = { workspace = true }
